--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 /.pnp
 .pnp.js
 
+/.idea
+
+/src/firebase.js
+/.env.local
+
 # testing
 /coverage
 
@@ -21,3 +26,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/src/firebase.js
+/src/firebase.js
+/src/firebase.js
